<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>nl.esciencecenter.platinum</groupId>
    <artifactId>platinum</artifactId>
    <packaging>pom</packaging>
    <name>Platinum [PTK]</name>
    <version>1.4.0-SNAPSHOT</version>

    <properties>
        <ptk.version>${project.version}</ptk.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <vterm.version>1.8.0-SNAPSHOT</vterm.version>
        <jackson.version>2.8.11</jackson.version>
    </properties>

    <modules>
       <!-- external modules -->
        <module>vterm</module>
        <!-- ptk -->
        <module>ptk-core</module>
        <module>ptk-web</module>
        <module>ptk-ui</module>
        <module>ptk-util-vterm</module>
        <module>ptk-vbrowser-vrs</module>
        <module>ptk-vbrowser-vrs-sftp</module>
        <module>ptk-vbrowser-ui</module>
        <module>ptk-vbrowser-viewers</module>
        <module>ptk-vbrowser-vrs-it</module>
        <module>ptk-vbrowser-z-start</module>
        <!--  last one here doens't mean it will be executed last -->
        <module>ptk-zipdist</module>
    </modules>

    <build>
        <pluginManagement>
            <!-- Parent plugin configurations trigger when plugin is referred to in
                child poms -->
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.0</version>
                    <configuration>
                        <release>11</release>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>2.6</version>
                </plugin>
                <!-- Reporting -->
                <plugin>
                    <artifactId>maven-project-info-reports-plugin</artifactId>
                    <version>3.1.2</version>
                </plugin>
                <!-- Assembly -->
                <plugin>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <version>3.3.0</version>
                </plugin>
                <!-- Surefire for Unit tests -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.22.2</version>
                    <configuration>
                        <!-- Skip UI Tests -->
                        <excludes>
                            <exclude>**/uitests/**</exclude>
                            <exclude>**/interactive/**</exclude>
                        </excludes>
                    </configuration>
                </plugin>
                <!-- Failsafe for Integration Tests -->
                <plugin>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>2.22.2</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>integration-test</goal>
                                <goal>verify</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <!-- Sonar for code inspection -->
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>sonar-maven-plugin</artifactId>
                    <version>2.6</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>versions-maven-plugin</artifactId>
                    <version>2.5</version>
                    <configuration>
                        <generateBackupPoms>false</generateBackupPoms>
                    </configuration>
                </plugin>

            </plugins>
        </pluginManagement>
    </build>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>1.18.12</version>
                <scope>provided</scope>
                <optional>true</optional>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>1.7.30</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-log4j12</artifactId>
                <version>1.7.30</version>
            </dependency>
            <!-- JUnit -->
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>4.12</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-core</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-annotations</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.dataformat</groupId>
                <artifactId>jackson-dataformat-xml</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <!-- java 11 version for default java 1.8 -->
            <dependency>
                <groupId>com.sun.activation</groupId>
                <artifactId>javax.activation</artifactId>
                <version>1.2.0</version>
            </dependency>
            <dependency>
                <groupId>javax.xml.bind</groupId>
                <artifactId>jaxb-api</artifactId>
                <version>2.3.0</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <!-- Toplevel declared dependencies for all modules -->
    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>
        <!-- testing -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>


    <distributionManagement>
        <repository>
            <id>${dist.artifactory.releases.id}</id>
            <name>Project Releases</name>
            <url>${dist.artifactory.releases.url}</url>
        </repository>
        <snapshotRepository>
            <id>${dist.artifactory.snapshots.id}</id>
            <name>Project Snapshots</name>
            <url>${dist.artifactory.snapshots.url}</url>
        </snapshotRepository>
    </distributionManagement>

</project>
